Ingress/ingress.yaml
#    helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
#    helm repo update
#    helm install nginx-ingress ingress-nginx/ingress-nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port: 
              number: 3001
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port: 
              number: 80
